vtnet: fix enabling/disabling tso

Transmit segment offloading depends on transmit checksum offloading.
Enforce that constraint. This also fixes a bug, since if_hwassist bits
are from the CSUM_ space, not from the IFCAP_ space.

PR:			290773
Reviewed by:		Timo Völker
Tested by:		lg@efficientip.com
MFC after:		3 days
Differential Revision:	https://reviews.freebsd.org/D53629